  * Add memory states events in the traces.
  * Add starpu_sched_component_estimated_end_min_add() to fix termination
    estimations in modular schedulers.
  * New function starpu_data_partition_not_automatic() to disable the
    automatic partitioning of a data handle for which a asynchronous
    plan has previously been submitted

Changes:
  * Vastly improve simgrid simulation time.
  * Switch default scheduler to lws.
  * Add "to" parameter to pull_task and can_push methods of
    components.
  * Deprecate starpu_data_interface_ops::handle_to_pointer interface
    operation in favor of new starpu_data_interface_ops::to_pointer
    operation.
  * Sort data access requests by priority.

Small changes:
  * Use asynchronous transfers for task data fetches with were not prefetched.
  * Allow to call starpu_sched_ctx_set_policy_data on the main
    scheduler context
  * Fonction starpu_is_initialized() is moved to the public API.
  * Fix code to allow to submit tasks to empty contexts

StarPU 1.2.6 (git revision 23049adea01837479f309a75c002dacd16eb34ad)
==============================================

Small changes:
  * Fix crash for lws scheduler
  * Avoid making hwloc load PCI topology when CUDA is not enabled

StarPU 1.2.5 (git revision 22f32916916d158e3420033aa160854d1dd341bd)
==============================================

Small features:
  * Add a new value STARPU_TASK_COLOR to be used in
    starpu_task_insert() to pick up the color of a task in dag.dot
  * Add starpu_data_pointer_is_inside().

Changes:
  * Do not export -lcuda -lcudart -lOpenCL in *starpu*.pc.

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,