@@ -116,6 +116,7 @@ Small features:
   * New function starpu_data_partition_not_automatic() to disable the
     automatic partitioning of a data handle for which a asynchronous
     plan has previously been submitted
+  * Add starpu_task_declare_deps.
 
 Changes:
   * Vastly improve simgrid simulation time.
